# plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml
plugin/: pyproject.toml  setup.cfg
plugin/my_plugin/: policy.py
plugin/src/policy_plugin/: policy.py
