[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy_plugin"
authors = [
    {name = "Manmeet Rangoola", email = "manmeet.rangoola@astronomer.io"},
]
description = "Airflow Example Policy Plugin"
readme = { file = "README.md", content-type = "text/markdown" }

version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["apache-airflow>=2.6"]

[project.entry-points.'airflow.policy']
_ = "policy_plugin.policy"
